fixed scrolling behavior && stylized scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,32 @@ a {
 	overflow: hidden;
 }
 
+body::-webkit-scrollbar {
+	width: 15px;
+}
+ 
+body::-webkit-scrollbar-track {
+	background-color: #000;
+}
+ 
+body::-webkit-scrollbar-thumb {
+  background-color: #888;
+  outline: none;
+}
+
+div::-webkit-scrollbar {
+	width: 15px;
+}
+ 
+div::-webkit-scrollbar-track {
+	background-color: #000;
+}
+ 
+div::-webkit-scrollbar-thumb {
+  background-color: #888;
+  outline: none;
+}
+
 .noselect {
 	-webkit-touch-callout: none;
 	  -webkit-user-select: none;
@@ -371,7 +397,7 @@ a {
 	background-color: #000;
 	width: 100vw;
 	height: 100vh;
-	z-index: 100;
+	z-index: 1100;
 }
 
 #dimmer {
@@ -390,10 +416,11 @@ a {
 	left: 50%;
 	transform: translateX(-50%);
 	width: 90%;
-	height: 100vh;
+	height: 92vh;
 	max-width: 1000px;
 	background-color: #111;
-	z-index: 200;
+	overflow: scroll;
+	z-index: 1200;
 	transition: top 0.5s ease-in-out;
 }
 
@@ -556,6 +583,14 @@ a {
 }
 
 @media only screen and (max-width: 520px) {
+	body::-webkit-scrollbar {
+		width: 10px;
+	}
+
+	div::-webkit-scrollbar {
+		width: 10px;
+	}
+	
 	.homeCard {
 		max-width: 288px;
 	}
@@ -634,13 +669,6 @@ a {
 
 	.homeNav p {
 		line-height: 25px;
-	}
-}
-
-@media only screen and (min-width: 700px) and (max-height: 960px), (max-height: 400px) {
-	.detailedPage {
-		position: absolute;
-		height: auto;
 	}
 }
 
